public/stylesheets/shadow.css
/*
Grey 80 % inner-shadow
*/
table.shadow tr td.tl-inner-shadow-80grey {
    background-image: url('/images/bg/tl-inner80grey.png');
    background-position: top left;
    background-repeat: no-repeat;
}

table.shadow tr td.tm-inner-shadow-80grey {
    background-image: url('/images/bg/bm80grey.png');
    background-repeat: repeat-x;
    background-position: top;
}

table.shadow tr td.tr-inner-shadow-80grey {
    background-image: url('/images/bg/tr-inner80grey.png');
    background-position: top right;
    background-repeat: no-repeat;
}



table.shadow tr td.ml-inner-shadow-80grey {
    background-image: url('/images/bg/mr80grey.png');
    background-repeat: repeat-y;
    background-position: left;
}

table.shadow tr td.mm-inner-shadow-80grey {
}

table.shadow tr td.mr-inner-shadow-80grey {
    background-image: url('/images/bg/ml80grey.png');
    background-repeat: repeat-y;
    background-position: right;
}



table.shadow tr td.bl-inner-shadow-80grey {
    background-image: url('/images/bg/bl-inner80grey.png');
    background-position: bottom left;
    background-repeat: no-repeat;
}

table.shadow tr td.bm-inner-shadow-80grey {
    background-image: url('/images/bg/tm80grey.png');
    background-repeat: repeat-x;
    background-position: bottom;
}

table.shadow tr td.br-inner-shadow-80grey {
    background-image: url('/images/bg/br-inner80grey.png');
    background-position: bottom right;
    background-repeat: no-repeat;
}


/*
Grey 80 % shadow
*/
table.shadow tr td.tl-shadow-80grey {
    background-image: url('/images/bg/tl80grey.png');
    background-position: bottom right;
    background-repeat: no-repeat;
}

table.shadow tr td.tm-shadow-80grey {
    background-image: url('/images/bg/tm80grey.png');
    background-repeat: repeat-x;
    background-position: bottom;
}

table.shadow tr td.tr-shadow-80grey {
    background-image: url('/images/bg/tr80grey.png');
    background-position: bottom left;
    background-repeat: no-repeat;
}



table.shadow tr td.ml-shadow-80grey {
    background-image: url('/images/bg/ml80grey.png');
    background-repeat: repeat-y;
    background-position: right;
}

table.shadow tr td.mm-shadow-80grey {
}

table.shadow tr td.mr-shadow-80grey {
    background-image: url('/images/bg/mr80grey.png');
    background-repeat: repeat-y;
    background-position: left;
}



table.shadow tr td.bl-shadow-80grey {
    background-image: url('/images/bg/bl80grey.png');
    background-position: top right;
    background-repeat: no-repeat;
}

table.shadow tr td.bm-shadow-80grey {
    background-image: url('/images/bg/bm80grey.png');
    background-repeat: repeat-x;
    background-position: top;
}

table.shadow tr td.br-shadow-80grey {
    background-image: url('/images/bg/br80grey.png');
    background-position: top left;
    background-repeat: no-repeat;
}

/*
NavyBlue 60% shadow
*/
table.shadow tr td.tl-shadow-60blue {
    background-image: url('/images/bg/tl60blue.png');
    background-position: bottom right;
    background-repeat: no-repeat;
}

table.shadow tr td.tm-shadow-60blue {
    background-image: url('/images/bg/tm60blue.png');
    background-repeat: repeat-x;
    background-position: bottom;
}

table.shadow tr td.tr-shadow-60blue {
    background-image: url('/images/bg/tr60blue.png');
    background-position: bottom left;
    background-repeat: no-repeat;
}



table.shadow tr td.ml-shadow-60blue {
    background-image: url('/images/bg/ml60blue.png');
    background-repeat: repeat-y;
    background-position: right;
}

table.shadow tr td.mm-shadow-60blue {

}

table.shadow tr td.mr-shadow-60blue {
    background-image: url('/images/bg/mr60blue.png');
    background-repeat: repeat-y;
    background-position: left;
}



table.shadow tr td.bl-shadow-60blue {
    background-image: url('/images/bg/bl60blue.png');
    background-position: top right;
    background-repeat: no-repeat;
}

table.shadow tr td.bm-shadow-60blue {
    background-image: url('/images/bg/bm60blue.png');
    background-repeat: repeat-x;
    background-position: top;
}

table.shadow tr td.br-shadow-60blue {
    background-image: url('/images/bg/br60blue.png');
    background-position: top left;
    background-repeat: no-repeat;
}



/*
Table
*/
.shadow-x {
    height: 15px;
}

.shadow-y {
    width: 15px;
}

table.shadow {
    border-spacing: 0;
    margin: 0;
    padding: 0;

    border-top-style: none;
    border-bottom-style: none;
    border-left-style: none;
    border-right-style: none;
}


td#shadow-left {
    width: 20px;

    background-repeat: repeat-y;
    background-position: right;
}

td#shadow-right {
    width: 20px;

    background-repeat: repeat-y;
    background-position: left;
}


.long {
    width: 690px; /* 750px of main div - 30px main shadow - 30px second shadow */
}

